--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -47,7 +47,8 @@
             %ul.dropdown-menu#tag-dropdown-menu
               %li= link_to "All topics", lists_path, remote: true
               - Tag.all.each do |tag|
-                %li= link_to tag.name, tag_path(tag), class: "tag-" + tag.name, remote: true
+                - if tag.lists.count > 0
+                  %li= link_to tag.name, tag_path(tag), class: "tag-" + tag.name, remote: true
 
 
 
