--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -236,7 +236,7 @@ a {
 .btn-invisible {
 	background: white;
 	border: none;
-	width: 90px;
+	width: 120px;
 	&:active {
 		border: none;
 	}
@@ -270,14 +270,17 @@ a {
 	}
 	text-align: center;
 	i {
-		font-size: 30px;
-		color: #e5c64b;
+		font-size: 40px;
+		// color: #e5c64b;
 		&:hover {
 			// color: #333;
 		}
 	}
-	i.fa-bookmark-o {
-		color: #444;
+	i.fa-plus-circle {
+		color: #82c440;
+	}
+	i.fa-minus-circle{
+		color: #e54b4b;
 	}
 	.fa-bookmark {
 		// color: #e5c64b;
@@ -301,6 +304,7 @@ a {
 
 .post-item--subtext {
 	line-height: 25px;
+	color: #444;
 }
 
 .post-item--text--name {
@@ -492,8 +496,13 @@ div {
 		margin-right: 10px;
 	}
 	button {
-		font-size: 1.2em;
-		background: #286090;
+		font-size: 1.5em;
+		background: transparent;
+		padding-top: 0px;
+	}
+	#post-new-finding-button {
+		margin-left: 40px;
+		margin-top: 13px;
 	}
 	.follow-form {
 		margin: 0px;
@@ -503,6 +512,9 @@ div {
 		}
 		.fa-bookmark-o {
 			color: white;
+		}
+		i {
+			font-size: 3em;
 		}
 	}
 	// margin-top: 60px;
