--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -27,13 +27,13 @@
         %a.header--secondary--link#following
           -if user_signed_in?
             =button_to subscriptions_path, method: "get", class: "btn btn-gray", id: ("active" if request.path == '/subscriptions') do
-              %i.fa.fa-bookmark
+              %i.fa.fa-plus-circle
               My Subscriptions
               %span#user-follow-count= "(#{current_user.lists.count})"
           -else
             %button.btn.btn-gray{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}
-              %i.fa.fa-bookmark
-              Following
+              %i.fa.fa-plus-circle
+              My Subscriptions
             =render partial: 'shared/sign_in_modal'
         - if request.env['PATH_INFO'] == '/'
           .btn-group#filter
