--- a/app/views/lists/_follow.html.haml
+++ b/app/views/lists/_follow.html.haml
@@ -1,7 +1,7 @@
 = form_for(current_user.subscriptions.build(list_id: list.id), remote: true) do |f|
   = f.hidden_field :list_id
   =button_tag(class: "btn btn-invisible") do
-    %i.fa.fa-bookmark-o
+    %i.fa.fa-plus-circle
   %ul 
-    %li GET UPDATES
+    %li Subscribe for updates
     %li= pluralize(list.users.count, 'subscriber')
