Clarify that tags are tags

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -320,7 +320,7 @@ a {
 	color: #444;
 	font-size: 30px;
 	font-weight: 500;
-	margin: 5px 2px 0;
+	margin: 5px 0px 0;
 	&:hover {
 		color: #333;
 		// text-decoration: none;
@@ -333,7 +333,7 @@ a {
 	margin: 5px 0 0 0px;
 	display: block;
 	line-height: 20px;
-
+	color: #444 !important;
 }
 
 .post-item--text-tag {
