--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -22,5 +22,6 @@
         .post-item--subtext
           =raw list.subtitle
         .post-item--text-tags
+          Tags:
           - list.tags.each do |tag| 
             %span.post-item--text-tag{class: "tag-" + tag.name}= tag.name
