Add 'new' notice to lists in last 24 hours

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -308,6 +308,9 @@ a {
 	display: inline-block;
 	max-width: 700px;
 	line-height: 30px;
+	.new {
+		color: #887faa;
+	}
 }
 
 .post-item--subtext {
