Add 'no subscriptions yet' message

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,20 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+.confirm {
+	text-align: center;
+}
+
+.nothing-here {
+	// width: 600px;
+	text-align: center;
+	margin-left: 120px;
+	margin-right: 120px;
+	color: gray;
+	h4 {
+		
+	}
+}
 
 #tag-dropdown-menu {
 	li a {
