--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -15,7 +15,8 @@
       .post-item--actions
         .post-item--actions--users
           %span.post-item--actions--user
-            .profile-img= image_tag(User.find_by(id: list.submitter).image)
+            - if !(User.find_by(id: list.submitter) == nil)
+              .profile-img= image_tag(User.find_by(id: list.submitter).image)
       .post-item--text
         .post-item--text--name
           = list.title
