--- a/app/views/lists/_unfollow.html.haml
+++ b/app/views/lists/_unfollow.html.haml
@@ -1,5 +1,5 @@
 = form_for(current_user.subscriptions.find_by(list_id: list.id), html: { method: :delete}, remote: true) do |f|
-  =button_tag(class: "btn btn-invisible") do
+  =button_tag(class: "btn btn-invisible", id: "unfollow") do
     %i.fa.fa-minus-circle
   %ul
     %li= "You and " + pluralize(list.users.count.to_s, 'other')
