Add name to header of logged in user

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -523,14 +523,21 @@ div {
 	}
 	button {
 		font-size: 1.5em;
-		background: transparent;
-		padding-top: 0px;
+		// width: 275px;
+		// background: transparent;
+		// padding-top: 0px;
 	}
 	#post-new-finding-button {
-		margin-left: 40px;
-		margin-top: 13px;
+		margin-left: 20px;
+		// margin-top: 13px;
 	}
 	.follow-form {
+		button {
+			width: 350px;
+		}
+		#unfollow {
+			background: #e54b4b;
+		}
 		margin: 0px;
 		ul li {
 			color: white;
@@ -555,12 +562,12 @@ div {
 			margin-left: 10px;
 		}
 	}
-	margin-top: 20px;
+	// margin-top: 20px;
 }
 
 #post-new-finding-button {
-	background: #e54b4b;
-	margin-left: 10px;
+	background: #e5894b;
+	// margin-left: 10px;
 }
 
 .list--badge {
@@ -625,6 +632,11 @@ div {
 		float: left;
 		font-size: 18px;
 
+	}
+	.welcome {
+		height: 40px;
+		font-size: 14px;
+		padding-top: 10px;
 	}
 	margin: 5px 0;
 	font-size: 18px;
