--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,8 +10,9 @@
             %h5 The latest research, delivered to your inbox
         %ul.header--nav
           - if user_signed_in?
-            %li.btn= link_to "Log Out", destroy_user_session_path, method: 'delete'
+            %li.btn.welcome= "Hello, #{current_user.first_name}!"
             %li.profile-img= image_tag(current_user.image)
+            %li.btn= link_to "Log Out", destroy_user_session_path, method: 'delete'
           -else
             %li.btn= link_to "Log In", user_omniauth_authorize_path(:facebook)
         %li.u-hidden-on-small-screen
