Change name and slogan

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,8 +6,8 @@
           .logo
             %i.fa.fa-fast-forward
           .brand--title.u-hidden-on-small-screen
-            %h1= link_to "FastForward", root_url
-            %h5 The latest research, delivered to your inbox
+            %h1= link_to "EconForward", root_url
+            %h5 Follow research topics and never miss a new finding
         %ul.header--nav
           - if user_signed_in?
             %li.btn.welcome= "Hello, #{current_user.first_name}!"
