--- a/app/views/subscriptions/index.html.haml
+++ b/app/views/subscriptions/index.html.haml
@@ -1,1 +1,1 @@
-= render partial: 'shared/feed', locals: {heading: "My Subscriptions", date: pluralize(current_user.lists.count, 'research question')}
+= render partial: 'shared/feed', locals: {heading: "Following", date: pluralize(current_user.lists.count, 'research topic')}
