--- a/app/views/lists/_unfollow.html.haml
+++ b/app/views/lists/_unfollow.html.haml
@@ -1,12 +1,5 @@
 = form_for(current_user.subscriptions.find_by(list_id: list.id), html: { method: :delete}, remote: true) do |f|
-  - if @subscribe_button == true 
-    =button_tag(class: "btn btn-invisible", id: "unfollow") do
-      %i.fa.fa-minus-circle
-    %ul
-      %li= "Youd and " + pluralize(list.users.count.to_s, 'other')
-      %li are following
-  - else
-    =button_tag(class: "btn btn-primary", id: "unfollow") do
-      Unsubscribe
-    %ul
-      %li= "You and " + pluralize(list.users.count, 'other person are ') + "following this question"
+  =button_tag(class: "btn btn-primary", id: "unfollow") do
+    Unfollow
+  %ul
+    / %li= "You and " + pluralize(list.users.count, 'other person are ') + "following this question"
