--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -16,7 +16,7 @@
           = raw @list.subtitle
       .page-header--buttons
         - if user_signed_in?
-          = render partial: 'lists/follow_form', locals: {list: @list}
+          = render partial: 'lists/follow_form', locals: {list: @list, list_index: false}
         - else
           %button.btn.btn-large.btn-primary{{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}}
             Sign in to be notified when there's a new finding
