--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -18,9 +18,10 @@
         - if user_signed_in?
           = render partial: 'lists/follow_form', locals: {list: @list, list_index: false}
         - else
-          %button.btn.btn-large.btn-primary{{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}}
-            Sign in to be notified when there's a new finding
-          = render partial: 'shared/sign_in_modal'
+          .follow-form#follow-form.new_subscription.new_subscription_sign_in
+            %button.btn.btn-primary.new_subscription#new_subscription_sign_in{{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}}
+              Sign in to be notified about new findings
+            = render partial: 'shared/sign_in_modal'
         %button.btn.btn-large.btn-primary#post-new-finding-button{{"data-target" => "#newFindingModal", "data-toggle" => "modal", :type => "button"}}
           Post a new finding
         = render partial: 'shared/new_finding_modal'
