--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -751,7 +751,7 @@ html {
 	width: 700px;
 	// margin: 0 auto;
 	margin-top: 30px;
-	margin-bottom: 50px;
+	// margin-bottom: 50px;
 	margin-left: 15px;
 	h3 {
 		margin-left: -15px;
