Add slogan to middle of header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,9 +6,14 @@
           .logo
             %i.fa.fa-fast-forward
           .brand--title.u-hidden-on-small-screen
-            %h1= link_to "EconForward", root_url
-            %h5 Follow research topics and never miss a new finding
+            = link_to root_url do
+              %h1 
+                %span EconForward
+                %div
+                  %sup DEVELOPMENT ECONOMICS
+            / %h5 Follow topics in development and never miss a new finding
         %ul.header--nav
+          %li.btn#slogan Follow the big questions, and never miss a new finding.
           - if user_signed_in?
             %li.btn.welcome= "Hello, #{current_user.first_name}!"
             %li.profile-img= image_tag(current_user.image)
