--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,11 @@
 	text-align: center;
 }
 
+#slogan {
+	font-size: 16px;
+	font-style: italic;
+}
+
 .nothing-here {
 	// width: 600px;
 	text-align: center;
