--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,8 +8,13 @@
 }
 
 #slogan {
-	font-size: 16px;
+	font-size: 14px;
 	font-style: italic;
+}
+
+.footer {
+	border-top: 1px solid #e4e2e2;
+	padding: 10px;
 }
 
 .nothing-here {
@@ -412,6 +417,11 @@ a {
 .page-main {
 	margin: 0;
 	padding: 0;
+	min-height: 500px;
+}
+
+.main-content {
+	height: 100%;
 }
 
 .container {
