--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,7 +13,7 @@
                   %sup DEVELOPMENT ECONOMICS
             / %h5 Follow topics in development and never miss a new finding
         %ul.header--nav
-          %li.btn#slogan Follow today's big questions, never miss a new finding.
+          %li.btn#slogan Follow today's big questions, get new findings delivered to your inbox.
           - if user_signed_in?
             %li.btn.welcome= "Hello, #{current_user.first_name}!"
             %li.profile-img= image_tag(current_user.image)
