--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,11 @@
 	padding: 10px;
 }
 
+.journal {
+	color: #bbb;
+	font-style: italic;
+}
+
 .nothing-here {
 	// width: 600px;
 	text-align: center;
