--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,5 +1,6 @@
 .post-item
   .post-item-content
+    %span.title--subtext.post-date= "#{list.updated_at.strftime('%A')}"
     .post-follow-button
       - if user_signed_in?
         = render partial: 'lists/follow_form', locals: {list: list, destination: @destination} 
@@ -18,7 +19,7 @@
       .post-item--text
         .post-item--text--name
           %span= list.title
-          %span.title--subtext= "#{list.updated_at.strftime('%A')}"
+
 
           / - if list.created_at > Time.now - 24.hours
           / %span.title--subtext.new NEW!
