--- a/app/views/lists/_follow.html.haml
+++ b/app/views/lists/_follow.html.haml
@@ -1,5 +1,5 @@
 = form_for(current_user.subscriptions.build(list_id: list.id), remote: true) do |f|
   = f.hidden_field :list_id
   =button_tag(class: "btn btn-primary", id: "follow") do
-    Follow
+    Get Email Updates
   %ul
