--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,1 +1,1 @@
-= render partial: 'shared/feed', locals: {heading: "Today", date: Date.today.strftime("%B %d")}
+= render partial: 'shared/feed', locals: {heading: "Question of the Day", date: Date.today.strftime("%B %d")}
