--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -7,7 +7,7 @@
       - else
         .follow-form#follow_form.new_subscription{id: "list" + list.id.to_s}
           %button.btn-primary.btn{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}
-            Follow
+            Get Email Updates
           %ul
           = render partial: 'shared/sign_in_modal'
     =link_to(list) do
