--- a/app/views/shared/_feed.html.haml
+++ b/app/views/shared/_feed.html.haml
@@ -7,6 +7,7 @@
       %span.title--subtext
         =yield(:date) unless date==nil
   .posts--group--header
+  / =@lists.shift
   .container
     %ul.posts--group
       -if @lists.count == 0
