--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -3,7 +3,7 @@
     / %span.title--subtext.post-date= "#{list.updated_at.strftime('%A')}"
     .post-follow-button
       - if user_signed_in?
-        = render partial: 'lists/follow_form', locals: {list: list, destination: @destination} 
+        = render partial: 'lists/follow_form', locals: {list: list} 
       - else
         .follow-form#follow_form.new_subscription{id: "list" + list.id.to_s}
           %button.btn-primary.btn{"data-target" => "#myModal", "data-toggle" => "modal", :type => "button"}
