Change 'findings' to 'empirical findings'

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -36,7 +36,7 @@
 .container
   %ul.findings
     %h3.title.v-big
-      %span Findings
+      %span Empirical Findings
 
     .papers-body
       .table-responsive
